Fixed alignment of three-words on navbar

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -97,7 +97,7 @@ nav {
 
         .three-words {
             padding: 0 0.3rem 0.6rem;
-            // margin: auto;
+            text-align: left;
 
             p {
                 margin: 0;
